Adding None Option to Model Selector and Submit Button

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                         HONDA
                     </p>
                     <select name="honda-model" id="honda-models">
+                        <option value="none">none</option>
                         <option value="cb400">CB 400</option>
                         <option value="cb600">CB 600 Hornet</option>
                         <option value="cbr600rr">CBR600RR</option>
@@ -72,6 +73,7 @@
                         KAWASAKI
                     </p>
                     <select name="kawasaki-model" id="kawasaki-models">
+                        <option value="none">none</option>
                         <option value="zx6r">ZX6R</option>
                         <option value="z750">Z750</option>
                         <option value="z900">Z900</option>
@@ -82,6 +84,7 @@
                         SUZUKI
                     </p>
                     <select name="suzuki-model" id="suzuki-models">
+                        <option value="none">none</option>
                         <option value="gsx750f">GSX 750F Katana</option>
                         <option value="gsx1000r">GSX-R 1000</option>
                         <option value="gsf1200">GSF 1200</option>
@@ -92,6 +95,7 @@
                          YAMAHA
                     </p>
                     <select name="yamaha-model" id="yamaha-models">
+                        <option value="none">none</option>
                         <option value="vmax">V-Max</option>
                         <option value="roadstar">Road Star</option>
                         <option value="r6">R6</option>
@@ -158,6 +162,9 @@
                     <input type="checkbox" name="xenon" id="cb-xenon"><label for="cb-xenon">Xenon</label>
                     <input type="checkbox" name="slider" id="cb-slider"><label for="cb-slider">Slider</label>
                     <input type="checkbox" name="custom-exhaust" id="cb-exhaust"><label for="cb-exhaust">Custom Exhaust</label>
+                    <br>
+                    <br>
+                    <input type="submit" value="Search">
                 </fieldset>
             </form>
         </div>
